--- a/images/grunticon/preview.html
+++ b/images/grunticon/preview.html
@@ -22,7 +22,7 @@
 	<body>
 
 		<h1>CUSTOM PREVIEW - you can change this in the previewTemplate option</h1>
-			<pre><code>.icon-coffee:</code></pre><div class="icon-coffee" style="width: 405.116px; height: 258.104px;" ></div><hr/>
+			<pre><code>.svg-coffee:</code></pre><div class="svg-coffee" style="width: 405.116px; height: 258.104px;" ></div><hr/>
 
 		<h2 id="embedded-svg-option">Embedded SVG option</h2>
 		<p>(The <code>data-grunticon-embed</code> attribute tells grunticon to inject SVG inline):</p>
